tests/NormalTests/paczka1/fuzzy1/93719780.err
Error in line 2: Yxtno9 S390 10,2
Error in line 5: Yxtno9 S939 11,9
Error in line 7: glgm S411 68,1
Error in line 20: Yxtno9 S939 61,7
Error in line 37: Yxtno9 S411 58,5
